2006-10-05  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Do not call Nikon commands on Canons.

2006-09-30  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: If PTP is busy, retry Nikon Capture
	  command.

2006-09-29  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Kodak Z612 as reported.

2006-09-25  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot A710 IS as reported.

2006-09-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Olympus IR-300
	* library.c: Do not allow "mkdir" of the same directory twice.
	* library.c: Do not allow "put" of the same file twice.

2006-09-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Kodak CD33.

2006-09-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Creative Zen V.
	* library.c: Added Canon PowerShot A630

2006-09-15  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Canon EOS 400D/Digital Rebel XTi
	This camera does not have the infamous PTP bug.

2006-09-13  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptp.[ch]: formatstore function (from libmtp).
	* library.c: fixed iconv() usage for non glibc etc (from libmtp).

2006-09-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added iRIver T10 2GB model.
	* library.c: Added Toshiba Gigabeat P10 model.

2006-09-09  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Uses short timeout during startup, but
	  longer timeouts later on.

2006-09-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Implemented MTP Abstract Playlist upload.
	
2006-09-02  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: CANON cmd 9006 is "lookup object".
	  (Could be used later to speed up directory listing.)

2006-08-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Handle cameras which just have files, but no
	  directory or root object. Kodak EasyShare C330 for instance.

	* library.c: GP_CAPTURE_IMAGE -> GP_OPERATION_CAPTURE_IMAGE.
