@@ -1,6 +1,9 @@
 2006-10-05  Marcus Meissner  <marcus@jet.franken.de>
 
 	* config.c: Do not call Nikon commands on Canons.
+	* library.c,config.c,ptp-private.h: 
+	  Initialize Canon capture if we do "to RAM" capture
+	  on canons.
 
 2006-09-30  Marcus Meissner  <marcus@jet.franken.de>
 	
